<?xml version="1.0"?>
<package format="2">
  <name>rc110_template</name>
  <version>0.0.0</version>
  <description>RoboCar 1/10 Node Template</description>
  <maintainer email="izac@zmp.co.jp">IZAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
